--- a/app/src/main/res/layout/activity_download_plant_page.xml
+++ b/app/src/main/res/layout/activity_download_plant_page.xml
@@ -35,6 +35,24 @@
         android:textAlignment="center"
         android:id="@+id/dataView"/>
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/dataView"
+        android:layout_above="@id/bottomNavigationView">
+
+
+    <ExpandableListView
+        android:id="@+id/lvExp"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true">
+
+    </ExpandableListView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 
 </RelativeLayout>
