--- a/app/src/main/res/layout/activity_survey_page.xml
+++ b/app/src/main/res/layout/activity_survey_page.xml
@@ -22,13 +22,21 @@
         android:layout_below="@id/searchView">
     </android.support.v7.widget.SearchView>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_height="match_parent"
         android:layout_above="@id/bottomNavigationView"
-        android:layout_below="@id/searchView"/>
+        android:layout_below="@id/searchView">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_margin="5dp"/>
+
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <!--<Button-->
         <!--android:id="@+id/to_add_Survey"-->
