--- a/app/src/main/res/layout/fragment_page2.xml
+++ b/app/src/main/res/layout/fragment_page2.xml
@@ -13,12 +13,20 @@
 
 
 
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/searchView">
+
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
-        android:layout_below="@id/searchView"
             android:layout_width="match_parent"
             android:layout_height="500dp"
             android:layout_margin="5dp"/>
+
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 
