--- a/app/src/main/res/layout/single_location_row.xml
+++ b/app/src/main/res/layout/single_location_row.xml
@@ -6,6 +6,7 @@
     android:layout_margin="5dp">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
