--- a/app/src/main/res/layout/single_survey_row.xml
+++ b/app/src/main/res/layout/single_survey_row.xml
@@ -6,6 +6,7 @@
     android:layout_margin="5dp">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -122,14 +123,31 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <ImageView
-                    android:layout_width="40dp"
+                <Button
+                    android:id="@+id/btn1"
+                    android:text="เพิ่มรูปภาพ"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:src="@drawable/ic_more_vert_black_24dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginRight="5dp"/>
+
+                <Button
+                    android:id="@+id/btn2"
+                    android:text="แก้ไข"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="20dp"
-                    />
+                    android:layout_marginRight="5dp"/>
+                <Button
+                    android:id="@+id/btn3"
+                    android:text="ลบ"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginRight="5dp"/>
 
             </RelativeLayout>
 
