--- a/app/src/main/res/layout/activity_download_location_page.xml
+++ b/app/src/main/res/layout/activity_download_location_page.xml
@@ -53,11 +53,13 @@
 
         <Button
             android:id="@+id/addButt"
-            android:background="@color/colorPrimary"
-            android:layout_width="107dp"
-            android:layout_height="61dp"
-            android:layout_marginEnd="25dp"
-            android:text="download" />
+            android:background="@drawable/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:text="ดาวน์โหลด" />
 
 
 
