--- a/app/src/main/res/layout/activity_download_plant_page.xml
+++ b/app/src/main/res/layout/activity_download_plant_page.xml
@@ -15,17 +15,22 @@
         android:background="#D3D3D3"
         design:menu="@menu/menu_navigation" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/bottomNavigationView"
+        android:orientation="vertical">
+    </LinearLayout>
+
     <Button
         android:id="@+id/addButt"
-        android:layout_margin="10dp"
-        android:layout_width="107dp"
+        android:background="@drawable/button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:text="ดาวน์โหลด"
-        android:textColor="#000"
-        android:background="@color/colorPrimaryDark"
-        android:textSize="16dp"/>
+        android:layout_margin="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:text="ดาวน์โหลด" />
 
     <TextView
         android:layout_width="match_parent"
