--- a/app/src/main/res/layout/activity_upload_page.xml
+++ b/app/src/main/res/layout/activity_upload_page.xml
@@ -28,11 +28,13 @@
 
     <Button
         android:id="@+id/butGo"
-        android:layout_width="wrap_content"
+        android:background="@drawable/button"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:text="Button" />
+        android:layout_margin="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp"
+        android:text="อัพโหลด" />
 
 
 
