--- a/app/src/main/res/layout/single_farming_row.xml
+++ b/app/src/main/res/layout/single_farming_row.xml
@@ -6,10 +6,12 @@
     android:layout_margin="5dp">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="5dp"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:layout_marginTop="10dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -17,19 +19,24 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:padding="1dp"
+                android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:layout_height="wrap_content">
+                android:orientation="vertical"
+                android:padding="1dp">
+
                 <TextView
+                    android:layout_marginTop="2.5dp"
+                    android:layout_marginBottom="2.5dp"
                     android:layout_marginLeft="5dp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="#000"
                     android:id="@+id/farming_id"
                     android:text="FarmingID"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:layout_marginTop="2.5dp"
+                    android:layout_marginBottom="2.5dp"
                     android:layout_marginLeft="5dp"
                     android:id="@+id/dmy_farming"
                     android:text="DMY_Farming"
@@ -37,6 +44,8 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:layout_marginTop="2.5dp"
+                    android:layout_marginBottom="2.5dp"
                     android:layout_marginLeft="5dp"
                     android:id="@+id/gardenid"
                     android:text="GardenID"
@@ -44,6 +53,8 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
+                    android:layout_marginTop="2.5dp"
+                    android:layout_marginBottom="2.5dp"
                     android:layout_marginLeft="5dp"
                     android:id="@+id/plantid"
                     android:text="PlantID"
@@ -52,18 +63,38 @@
 
 
             </LinearLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/ic_more_vert_black_24dp"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="20dp"
-                />
+
+                <Button
+                    android:id="@+id/btn1"
+                    android:text="เพิ่มสำรวจ"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginRight="5dp"/>
+
+                <Button
+                    android:id="@+id/btn2"
+                    android:text="แก้ไข"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp"/>
+                <Button
+                    android:id="@+id/btn3"
+                    android:text="ลบ"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginRight="5dp"/>
+
 
             </RelativeLayout>
 
