--- a/app/src/main/res/layout/activity_add_farming2.xml
+++ b/app/src/main/res/layout/activity_add_farming2.xml
@@ -11,7 +11,7 @@
         android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-    tools:context="com.example.macxpiiw.myapplication.UpdateFarmingRecord">
+        tools:context="com.example.macxpiiw.myapplication.AddFarming2">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,53 +19,32 @@
             android:orientation="vertical"
             android:layout_marginTop="1dp">
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/updateDMY_Farming"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="วันที่เพาะปลูก(ปปปป-ดด-วว)"
-                    android:inputType="phone"
-                    android:layout_marginBottom="20dp"/>
-            </android.support.design.widget.TextInputLayout>
-
-
-
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="เกษตรกร :"
-                    android:layout_margin ="5dp"
-                    android:textSize="18dp"/>
-                <Spinner
-                    android:id="@+id/updateGardenName_spinner"
+                <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_margin="5dp">
-                </Spinner>
+                    android:layout_height="wrap_content">
 
+                    <EditText
+                        android:id="@+id/addDMY_Farming"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="วันที่เพาะปลูก(ปปปป-ดด-วว)"
+                        android:inputType="phone"
+                        android:layout_marginBottom="20dp"/>
+                </android.support.design.widget.TextInputLayout>
 
+                <Button
+                    android:id="@+id/btnpickdate"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:drawableStart="@drawable/ic_date_range_black_24dp"
+                    android:layout_alignParentRight="true" />
 
-            </LinearLayout>
-
-
-            <GridLayout
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="@color/black_overlay">
-            </GridLayout>
-
-
+            </RelativeLayout>
 
 
             //สปินเนอร์ พันข้าว
@@ -81,7 +60,7 @@
                     android:layout_margin ="5dp"
                     android:textSize="18dp"/>
                 <Spinner
-                    android:id="@+id/updatePlant_spinner"
+                    android:id="@+id/spinner_plantName"
                     android:layout_width="match_parent"
                     android:layout_height="30dp"
                     android:layout_margin="5dp">
@@ -101,23 +80,30 @@
             </GridLayout>
 
             <Button
-                android:id="@+id/btn_updateFarming"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="เพิ่มพันธุ์ข้าว"
+                android:layout_gravity="right"
+                android:id="@+id/foraddplant"
+                />
+
+
+            <Button
+                android:id="@+id/btn_addFarming"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/bottomNavigationView"
                 android:layout_alignParentStart="true"
                 android:gravity="center"
+
                 android:layout_margin="5dp"
-                android:text="แก้ไข"
+                android:text="เพิ่ม"
                 android:textColor="#000"
                 android:background="@color/colorPrimaryDark"
                 android:textSize="20sp" />
-
-
 
 
         </LinearLayout>
 
     </RelativeLayout>
 </ScrollView>
-
