--- a/app/src/main/res/layout/single_location_row.xml
+++ b/app/src/main/res/layout/single_location_row.xml
@@ -15,7 +15,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -66,39 +66,40 @@
                     <!--android:layout_height="wrap_content" />-->
             </LinearLayout>
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
 
-                <Button
-                    android:id="@+id/btn1"
-                    android:text="เพิ่มแปลง"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="5dp"/>
 
-                <Button
-                    android:id="@+id/btn2"
-                    android:text="แก้ไข"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="5dp"/>
-                <Button
-                    android:id="@+id/btn3"
-                    android:text="ลบ"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginRight="5dp"/>
+                    <Button
+                        android:id="@+id/btn1"
+                        android:text="เพิ่มแปลง"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_margin="5dp"/>
 
+                    <Button
+                        android:id="@+id/btn2"
+                        android:text="แก้ไข"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_margin="5dp"
+                        android:layout_centerHorizontal="true"/>
+                    <Button
+                        android:id="@+id/btn3"
+                        android:text="ลบ"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_margin="5dp"
+                        android:layout_alignParentRight="true"/>
 
-            </RelativeLayout>
+                </RelativeLayout>
+            </LinearLayout>
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
