--- a/app/src/main/res/layout/single_survey_row.xml
+++ b/app/src/main/res/layout/single_survey_row.xml
@@ -14,7 +14,12 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -24,7 +29,7 @@
                 android:layout_height="wrap_content">
                 <TextView
                     android:layout_marginLeft="5dp"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="#000000"
                     android:id="@+id/survey_id"
                     android:text="SurveyID"
                     android:layout_width="wrap_content"
@@ -63,93 +68,94 @@
                     android:layout_height="wrap_content" />
 
 
-                <!--<TextView-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:id="@+id/temp"-->
-                    <!--android:text="Temp"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
-                <!--<TextView-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:id="@+id/moisture"-->
-                    <!--android:text="Moisture"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
+            </LinearLayout>
 
-                <!--<TextView-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:id="@+id/rain"-->
-                    <!--android:text="Rain"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
-                <!--<TextView-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:id="@+id/light"-->
-                    <!--android:text="Light"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-                <!--<TextView-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:id="@+id/dew"-->
-                    <!--android:text="Dew"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
+                    <Button
+                        android:id="@+id/btn_view_pic"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="ดูรูป"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_margin="20dp"/>
 
-                <!--<TextView-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:id="@+id/category"-->
-                    <!--android:text="Category"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
-                <!--<TextView-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:id="@+id/sample_point"-->
-                    <!--android:text="SamplePoint"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
-
-                <!--<TextView-->
-                    <!--android:layout_marginLeft="5dp"-->
-                    <!--android:id="@+id/point"-->
-                    <!--android:text="Point"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content" />-->
-
+                </RelativeLayout>
 
             </LinearLayout>
 
-            <RelativeLayout
+
+
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-                <Button
-                    android:id="@+id/btn1"
-                    android:text="เพิ่มรูปภาพ"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="5dp"/>
 
-                <Button
-                    android:id="@+id/btn2"
-                    android:text="แก้ไข"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="5dp"/>
-                <Button
-                    android:id="@+id/btn3"
-                    android:text="ลบ"
-                    android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginRight="5dp"/>
 
-            </RelativeLayout>
+                    <Button
+                        android:id="@+id/btn1"
+                        android:text="เพิ่มรูปภาพ"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_margin="5dp"/>
+
+                    <Button
+                        android:id="@+id/btn2"
+                        android:text="แก้ไข"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_margin="5dp"
+                        android:layout_centerHorizontal="true"/>
+                    <Button
+                        android:id="@+id/btn3"
+                        android:text="ลบ"
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_margin="5dp"
+                        android:layout_alignParentRight="true"/>
+
+                </RelativeLayout>
+            </LinearLayout>
+
+            <!--<RelativeLayout-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="match_parent">-->
+
+                <!--<Button-->
+                    <!--android:id="@+id/btn1"-->
+                    <!--android:text="เพิ่มรูปภาพ"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="40dp"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_alignParentTop="true"-->
+                    <!--android:layout_marginRight="5dp"/>-->
+
+                <!--<Button-->
+                    <!--android:id="@+id/btn2"-->
+                    <!--android:text="แก้ไข"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="40dp"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_centerVertical="true"-->
+                    <!--android:layout_marginRight="5dp"/>-->
+                <!--<Button-->
+                    <!--android:id="@+id/btn3"-->
+                    <!--android:text="ลบ"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="40dp"-->
+                    <!--android:layout_alignParentRight="true"-->
+                    <!--android:layout_alignParentBottom="true"-->
+                    <!--android:layout_marginRight="5dp"/>-->
+
+            <!--</RelativeLayout>-->
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
