--- a/app/src/main/res/layout/single_image_row.xml
+++ b/app/src/main/res/layout/single_image_row.xml
@@ -54,6 +54,15 @@
 
                 <TextView
                     android:layout_marginLeft="5dp"
+                    android:id="@+id/disease"
+                    android:text="disease"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+
+
+                <TextView
+                    android:layout_marginLeft="5dp"
                     android:id="@+id/note"
                     android:text="Note"
                     android:layout_width="wrap_content"
