--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -186,6 +186,23 @@
                 android:textSize="16dp" />
 
 
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="20dp">
+
+                <ViewFlipper
+                    android:id="@+id/viewFlip3"
+                    android:layout_width="250dp"
+                    android:layout_height="400dp"
+                    android:layout_gravity="center"/>
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
     </ScrollView>
