--- a/app/src/main/res/layout/activity_download_location_page.xml
+++ b/app/src/main/res/layout/activity_download_location_page.xml
@@ -16,6 +16,15 @@
         design:menu="@menu/menu_navigation" />
 
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refreshdownload"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottomNavigationView">
+
+
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -71,7 +80,11 @@
         android:layout_width="wrap_content"
         android:layout_height="309dp"
         android:layout_above="@+id/bottomNavigationView"
-        android:layout_alignParentStart="true"></ExpandableListView>
+        android:layout_alignParentStart="true">
+
+    </ExpandableListView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 
