--- a/app/src/main/res/layout/activity_download_plant_page.xml
+++ b/app/src/main/res/layout/activity_download_plant_page.xml
@@ -16,6 +16,7 @@
         design:menu="@menu/menu_navigation" />
 
     <LinearLayout
+        android:layout_margin="10dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottomNavigationView"
@@ -41,6 +42,7 @@
         android:id="@+id/dataView"/>
 
     <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_margin="10dp"
         android:id="@+id/swipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -49,6 +51,7 @@
 
 
     <ExpandableListView
+        android:layout_margin="10dp"
         android:id="@+id/lvExp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
