Commit ล่าสุดของพริ้วสุดหล่อละ edit: แก้หน้าแรกตามจารสุจิน , เพิ่มโลโก้ , แก้ชื่อ , +ของออมละ

--- a/app/src/main/res/menu/select_all.xml
+++ b/app/src/main/res/menu/select_all.xml
@@ -5,7 +5,7 @@
 
     <item
         android:id="@+id/select_all"
-        android:title="SELECTALL"
+        android:title="เลือกทั้งหมด"
         app:showAsAction="always"/>
 
 </menu>
