--- a/app/src/main/res/layout/activity_download_page.xml
+++ b/app/src/main/res/layout/activity_download_page.xml
@@ -55,6 +55,28 @@
 
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.CardView
+        android:id="@+id/to_delete"
+        android:layout_above="@id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_margin="10dp"
+        android:textSize="20sp"
+        android:textColor="#000"
+        android:gravity="center"
+        android:text="B1"
+        app:cardBackgroundColor="#DC143C">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:textSize="24dp"
+            android:textColor="#000000"
+            android:text="ลบข้อมูลทั้งหมดในโทรศัพท์"/>
+
+    </android.support.v7.widget.CardView>
+
 
 
 
