--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/textView3"
                 android:layout_width="208dp"
                 android:layout_height="72dp"
-                android:text="ยินดีตอนรับ"
+                android:text="ยินดีต้อนรับ"
                 android:textAlignment="center"
                 android:textSize="36dp"
                 tools:ignore="MissingConstraints"
