--- a/app/src/main/res/layout/activity_download_location_page.xml
+++ b/app/src/main/res/layout/activity_download_location_page.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_alignParentTop="true"
+        android:layout_above="@id/addButt">
 
 
         <LinearLayout
@@ -58,15 +59,7 @@
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/addButt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="2dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:background="@drawable/button"
-                android:text="ดาวน์โหลด" />
+
 
             <ExpandableListView
                 android:layout_marginTop="2dp"
@@ -84,6 +77,17 @@
 
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <Button
+        android:id="@+id/addButt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/button"
+        android:text="ดาวน์โหลด"
+        android:layout_above="@id/bottomNavigationView"/>
 
 
 
