--- a/app/src/main/res/layout/activity_download_page.xml
+++ b/app/src/main/res/layout/activity_download_page.xml
@@ -65,7 +65,7 @@
         android:textColor="#000"
         android:gravity="center"
         android:text="B1"
-        app:cardBackgroundColor="#DC143C">
+        app:cardBackgroundColor="@color/colorPrimaryDark">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,7 +73,8 @@
             android:layout_gravity="center"
             android:textSize="24dp"
             android:textColor="#000000"
-            android:text="ลบข้อมูลทั้งหมดในโทรศัพท์"/>
+            android:text="ลบข้อมูลแปลงสำรวจพื้นฐาน และการสำรวจ ในโทรศัพท์"
+            android:textAlignment="center"/>
 
     </android.support.v7.widget.CardView>
 
